--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,14 @@ services:
     env: python
     buildCommand: pip install -r requirements.txt
     startCommand: python app.py
-    port: 5000
-    files:
-      - requirements.txt
-      - app.py
+    plan: free
+    autoDeploy: true
+    envVars:
+      - key: PORT
+        value: 5000
+    buildFilter:
+      paths:
+        - app.py
+        - requirements.txt
+        - runtime.txt
+        - netflix_movies.csv # ✅ include CSV
